--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lightning",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "main.js",
   "scripts": {
     "build": "webpack --config webpack.config.js"
   },
